[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["fallmx <31561277+fallmx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
jsonpickle = "^3.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
